--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=24w40a
+curseforge_minecraft_version=1.21.2-Snapshot
 loader_version=0.16.5
 
 # Mod Properties
