--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=24w40a
+minecraft_version=1.21.2-pre1
 curseforge_minecraft_version=1.21.2-Snapshot
 loader_version=0.16.5
 
@@ -15,5 +15,5 @@ archives_base_name=instantfeedback
 
 
 # Dependencies
-fabric_version=0.105.2+1.21.2
+fabric_version=0.105.3+1.21.2
 
