--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.2-pre1
+minecraft_version=1.21.2-rc2
 curseforge_minecraft_version=1.21.2-Snapshot
-loader_version=0.16.5
+loader_version=0.16.7
 
 # Mod Properties
 mod_version=1.1.1
@@ -15,5 +15,5 @@ archives_base_name=instantfeedback
 
 
 # Dependencies
-fabric_version=0.105.3+1.21.2
+fabric_version=0.106.1+1.21.2
 
