--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.2-rc2
-curseforge_minecraft_version=1.21.2-Snapshot
-loader_version=0.16.7
+minecraft_version=24w44a
+curseforge_minecraft_version=1.21.4-Snapshot
+loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.1.1
+mod_version=1.2.0
 maven_group=me.drex.instantfeedback
 archives_base_name=instantfeedback
 
 
 # Dependencies
-fabric_version=0.106.1+1.21.2
+fabric_version=0.107.0+1.21.4
 
