--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=24w44a
-curseforge_minecraft_version=1.21.2-Snapshot
+minecraft_version=1.21.4
+curseforge_minecraft_version=1.21.4
 loader_version=0.16.9
 
 # Mod Properties
@@ -15,5 +15,5 @@ archives_base_name=instantfeedback
 
 
 # Dependencies
-fabric_version=0.107.0+1.21.4
+fabric_version=0.110.5+1.21.4
 
